name:               consultorio
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          consultorio
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    Add
                    Home
                    Handlers.Usuario
                    Handlers.Medico
                    Handlers.Paciente
                    Handlers.Consulta

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-static
                , yesod-form
                , text
                , time
                , persistent                    
                , persistent-postgresql
                , monad-logger
                , shakespeare


  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
